[project]
name = "OpenAI-SDK-Salesbot"
version = "0.1.0"
description = "New Framework Based on OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "uvicorn==0.40.0",
    "python-multipart==0.0.21",
    # LLM and AI
    "openai>=2.19.0",
    "openai-agents[sqlalchemy]==0.10.1",
    "litellm==1.80.11",
    "opik==1.9.69",
    "qdrant-client==1.15.1",
    "fastembed==0.7.3",
    "langchain-core==1.1.3",
    "langchain-text-splitters==1.0.0",
    "langsmith==0.4.59",
    "sentence-transformers==3.0.1",
    # Data and utilities
    "pandas==2.3.3",
    "numpy==2.2.6",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "scikit-learn==1.7.2",
    "pytz==2025.2",
    # Async and networking
    "aiohttp==3.13.2",
    "aiosqlite==0.21.0",
    "httpx==0.28.1",
    # Database
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.11",
    # Document processing
    "beautifulsoup4==4.14.3",
    "requests==2.32.5",
    "docling==2.64.1",
    "docling-core==2.55.0",
    # Crawling and ETL
    "Crawl4AI==0.7.8",
    # Azure
    "azure-identity==1.25.1",
    "azure-storage-blob==12.27.1",
    "azure-ai-documentintelligence==1.0.2",
    # Google
    "google-generativeai==0.8.5",
    "google-genai==1.55.0",
    # Others
    "python-dotenv==1.2.1",
    "python-toon==0.1.3",
    "fastapi>=0.133.0",
    "streamlit>=1.54.0",
    "markdown>=3.10.2",
    "markdownify>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
